// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHtmlExample with modifier generates correctly 1`] = `
Object {
  "body": "<button>Foo</button>
  <script type=\\"text/javascript\\" src=\\"/public/scripts/example.js\\"></script>",
  "head": "<title>Example: components.button</title>
  <link rel=\\"stylesheet\\" href=\\"/public/styles/example.css\\" />",
  "uri": "example/components.button.secondary",
}
`;

exports[`generateHtmlExample with no modifier generates correctly 1`] = `
Object {
  "body": "<button>Foo</button>
  <script type=\\"text/javascript\\" src=\\"/public/scripts/example.js\\"></script>",
  "head": "<title>Example: components.button</title>
  <link rel=\\"stylesheet\\" href=\\"/public/styles/example.css\\" />",
  "uri": "example/components.button",
}
`;
